@@ -1,4 +1,4 @@
-VERSION = (0, 6, 6)
+VERSION = (0, 6, 7)
 
 
 def get_version(svn=False, limit=3):
