@@ -1,0 +1,29 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# 
+msgid ""
+msgstr ""
+"Project-Id-Version: Rosetta\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2009-10-21 12:21+0200\n"
+"PO-Revision-Date: 2008-09-22 11:02\n"
+"Last-Translator: Admin Admin <admin@admin.com>\n"
+"Language-Team: French <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.4.RC2\n"
+
+msgid ""
+"\n"
+" %s customer hidden\n"
+msgid_plural ""
+"\n"
+" %s customers hidden\n"
+msgstr[0] ""
+msgstr[1] ""
+
+msgid "Hello\n"
+msgstr ""
